--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "postcss": "^8.5.1",
+    "shadcn-ui": "^0.9.4",
     "tailwindcss": "^4.0.0",
     "vite": "^6.0.5"
   }
