--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.0.0",
+    "@tailwindcss/vite": "^4.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@shadcn/ui": "^0.0.4",
     "@tailwindcss/postcss": "^4.0.0",
+    "@types/node": "^22.13.1",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
@@ -28,7 +30,7 @@
     "globals": "^15.14.0",
     "postcss": "^8.5.1",
     "shadcn-ui": "^0.9.4",
-    "tailwindcss": "^4.0.0",
+    "tailwindcss": "^4.0.4",
     "vite": "^6.0.5"
   }
 }
